--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+*{margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+
 body {
   background: url(./assets/assets/bg-mobile.jpg) no-repeat top center/cover;
 }
@@ -9,19 +15,22 @@ body * {
 
 #container {
   width: 360px;
-  border: 1px solid red;
-  margin: auto;
+  margin: 56px auto 0px
 }
 
 #profile {
-  text-align: center;
+    text-align: center;
+    padding: 24px;
 }
 
 #profile img {
-  width: 112px;
+width: 112px;
 }
+
+
 
 #profile p {
   font-weight: 500;
   line-height: 24px;
+  margin-top: 8px;
 }
