--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
-*{margin: 0;
+*{
+  margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
@@ -15,7 +16,8 @@ body * {
 
 #container {
   width: 360px;
-  margin: 56px auto 0px
+  margin: 56px auto 0px;
+  padding: 0 24px;
 }
 
 #profile {
@@ -33,4 +35,43 @@ width: 112px;
   font-weight: 500;
   line-height: 24px;
   margin-top: 8px;
+}
+
+
+/* Links */
+ul {
+list-style: none;
+
+display: flex;
+flex-direction: column;
+gap: 16px;
+}
+
+ul li a{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  padding: 16px 24px;
+
+  background: rgba(255, 255, 255, 0.1);
+  border: 1px solid rgba(255, 255, 255, 0.5) ;
+  border-radius: 8px;
+
+
+  -webkit-backdrop-filter: blur(4px);
+
+  text-decoration: none;
+  font-weight: 500;
+
+transition: background 0.2s;
+
+}
+
+/* pseudo-selector */
+ul li a:hover {
+background: rgba(255, 255, 255, 0.05);
+border: 1.5px solid white;
+
+
 }
